--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -26,7 +26,7 @@
   color: #ffffff;
   padding: 10px 15px;
   border-radius: 999px;
-  background-color: #5a680ce8;
+  background-color: #1981aa;
   font-family: "Righteous", cursive;
 }
 
@@ -53,7 +53,7 @@
     font-size: 25px;
   }
   .home .person img {
-    width: 70%;
+    width: 60%;
     border-radius: 100%;
 
   }
