--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,6 +11,8 @@
   font-size: 18px;
   text-align: center;
   font-family: "Righteous", cursive;
+  text-shadow: 2px 2px 5px rgb(128, 124, 124);
+
 }
 
 .home .title p {
@@ -28,6 +30,8 @@
   border-radius: 999px;
   background-color: #1981aa;
   font-family: "Righteous", cursive;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+
 }
 
 .home .person {
@@ -38,6 +42,8 @@
 .home .person img {
     width: 80%;
     border-radius: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
+
 }
 
 @media (min-width: 800px) {
@@ -50,7 +56,7 @@
     width: 50%;
     margin-top: 0;
     text-align: left;
-    font-size: 25px;
+    font-size: 20px;
   }
   .home .person img {
     width: 60%;
